--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.4.1.js"></script>
+    <script src="js/scripts.js"></script>
     <meta charset="utf-8">
-    <title></title>
+    <title>Places Been</title>
   </head>
   <body>
+    <div class="container">
+      <div class="jumbotron">
+        <h1 class="display-1">Places Been</h1>
+          <form id="eitherOneWorks">
+              <label for="input1"><h2>City:</h2></label>
+              <input type="text" class="city" >
+            <br>
+              <label for="input1"><h2>Landmarks Visited:</h2></label>
+              <input type="text" class="landmarkVisited" >
+
+            <br>
+              <label for="input1"><h2>Date visited:</h2></label>
+              <input type="text" class="dateOfVisit" >
+              <button type="submit" id="btn"><strong>Submit</strong></button>
+          </form>
+        </div>
+      </div>
 
   </body>
 </html>
