--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
           </form>
         </div>
       </div>
-
+      <p class="input1"></p>
+        <!-- <p id="trip2"></p>
+          <p id="trip3"> </p> -->
   </body>
 </html>
